add localization support and translation to Hungarian

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
   html: ^0.13.4+1
@@ -37,6 +40,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.7.2
+  intl_translation: ^0.17.1
 
 flutter_icons:
   android: "launcher_icon"
