--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,9 +1,3 @@
 files:
-  - source: /res/values/
-    ignore:
-      - /res/values/*_hu.arb
-      - /res/values/*_es.arb
-      - /res/values/*_fr.arb
-      - /res/values/*_it.arb
-      - /res/values/*_de.arb
+  - source: /res/values/source
     translation: /res/values/strings_%two_letters_code%.arb
